# ds-emulator

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.claude/agents/: ds-architecture-rule-checker.md  gbatek-reviewer.md
.claude/hooks/: clang-format.sh  protect-claude-md.sh
.claude/skills/gbatek-check/: SKILL.md
.claude/skills/run-arm-tests/: SKILL.md
cmake/: AppleSilicon.cmake  CompilerWarnings.cmake  Sanitizers.cmake
docs/specs/: 2026-04-12-nds-emulator-design.md  2026-04-13-scheduler-phase1-design.md  2026-04-14-arm7-core-phase1-slice3b1-design.md  2026-04-14-arm7-core-phase1-slice3b2-design.md  2026-04-14-arm7-core-phase1-slice3b3-design.md  2026-04-15-arm7-core-phase1-slice3b4-design.md  2026-04-16-arm7-core-phase1-slice3c-design.md  2026-04-16-arm7-core-phase1-slice3d-design.md  2026-04-16-arm7-core-phase1-slice3e-design.md  2026-04-18-arm7-core-phase1-slice3f-design.md  2026-04-18-arm7-core-phase1-slice3g-design.md  2026-04-19-arm7-core-phase1-slice3h-design.md
docs/specs/.notes/: thumb-gbatek-reference.md
docs/superpowers/plans/: 2026-04-12-phase-0-scaffolding.md  2026-04-13-arm7-core-phase1-slice3a.md  2026-04-13-bus-phase1-slice2.md  2026-04-13-scheduler-phase1.md  2026-04-14-arm7-core-phase1-slice3b1.md  2026-04-14-arm7-core-phase1-slice3b2.md
docs/superpowers/specs/: 2026-04-12-nds-emulator-design.md  2026-04-13-scheduler-phase1-design.md  2026-04-14-arm7-core-phase1-slice3b1-design.md  2026-04-14-arm7-core-phase1-slice3b2-design.md
include/ds/: common.hpp  fixed.hpp  ring_buffer.hpp
src/: CMakeLists.txt  main.cpp  nds.cpp  nds.hpp
src/bus/: arm7_bus.cpp  arm7_bus.hpp  arm9_bus.cpp  arm9_bus.hpp  io_regs.hpp  page_table.hpp  wram_control.hpp
src/cpu/: cpu_core.hpp  dispatcher.hpp
src/cpu/arm7/: arm7.cpp  arm7.hpp  arm7_alu.hpp  arm7_block.cpp  arm7_block_internal.hpp  arm7_branch.cpp  arm7_decode.cpp  arm7_decode_000.cpp  arm7_decode_internal.hpp  arm7_dp.cpp  arm7_exception.cpp  arm7_exception.hpp  arm7_halfword.cpp  arm7_loadstore.cpp  arm7_multiply.cpp  arm7_psr.cpp  arm7_state.hpp  arm7_swap.cpp  arm7_thumb_block.cpp  arm7_thumb_branch.cpp  arm7_thumb_decode.cpp  arm7_thumb_dp.cpp  arm7_thumb_internal.hpp  arm7_thumb_ls.cpp
src/cpu/arm7/bios/: bios7_decomp.cpp  bios7_decomp.hpp  bios7_decomp_huffman.cpp  bios7_decomp_lz77_vram.cpp  bios7_decomp_rle_vram.cpp  bios7_get_pitch_table.cpp  bios7_get_sine_table.cpp  bios7_get_volume_table.cpp  bios7_halt.cpp  bios7_halt.hpp  bios7_hle.cpp  bios7_hle.hpp  bios7_math.cpp  bios7_math.hpp  bios7_memcpy.cpp  bios7_memcpy.hpp  bios7_tables.cpp  bios7_tables.hpp  bios7_trampoline.cpp  bios7_trampoline.hpp
src/cpu/arm9/: arm9.cpp  arm9.hpp
src/frontend/: CMakeLists.txt  frontend.cpp  frontend.hpp
src/interrupt/: irq_controller.hpp
src/scheduler/: event.hpp  scheduler.cpp  scheduler.hpp
tests/: CMakeLists.txt
tests/support/: arm7_step.hpp  require.hpp
tests/unit/: arm7_adc_sbc_test.cpp  arm7_barrel_shifter_test.cpp  arm7_bios_bitunpack_test.cpp  arm7_bios_decomp_callback_sequence_test.cpp  arm7_bios_decomp_dispatch_test.cpp  arm7_bios_decomp_sequence_test.cpp  arm7_bios_dispatch_test.cpp  arm7_bios_huffman_test.cpp  arm7_bios_intrwait_test.cpp  arm7_bios_lz77_test.cpp  arm7_bios_lz77_vram_test.cpp  arm7_bios_math_test.cpp  arm7_bios_memcpy_test.cpp  arm7_bios_rle_test.cpp  arm7_bios_rle_vram_test.cpp  arm7_bios_sequence_test.cpp  arm7_bios_tables_test.cpp  arm7_bios_trampoline_test.cpp  arm7_block_swap_sequence_test.cpp  arm7_block_test.cpp  arm7_branch_load_sequence_test.cpp  arm7_branch_test.cpp  arm7_bus_test.cpp  arm7_condition_test.cpp  arm7_data_processing_test.cpp  arm7_dp_spsr_restore_test.cpp  arm7_exception_abort_test.cpp  arm7_exception_fiq_test.cpp  arm7_exception_helper_test.cpp  arm7_exception_irq_test.cpp  arm7_exception_sequence_test.cpp  arm7_exception_swi_arm_test.cpp  arm7_exception_swi_thumb_test.cpp  arm7_exception_undef_arm_test.cpp  arm7_exception_undef_thumb_test.cpp  arm7_flags_test.cpp  arm7_halfword_sequence_test.cpp  arm7_halfword_test.cpp  arm7_halt_test.cpp  arm7_irq_controller_test.cpp  (+20 more)
tools/: gen_volume_table.py
