# ds_tests — one binary per test source file, each links ds_core only.
# No SDL dependency, runs in milliseconds.

function(add_ds_unit_test name)
    add_executable(${name} unit/${name}.cpp)
    target_link_libraries(${name} PRIVATE ds_core)
    target_include_directories(${name} PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/tests/support
    )
    target_enable_warnings(${name})
    target_apple_silicon(${name})
    target_enable_sanitizers(${name})
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_ds_unit_test(fixed_test)
add_ds_unit_test(ring_buffer_test)
add_ds_unit_test(scheduler_test)
add_ds_unit_test(page_table_test)
add_ds_unit_test(arm9_bus_test)
add_ds_unit_test(arm7_bus_test)
add_ds_unit_test(wramcnt_test)
add_ds_unit_test(nds_integration_test)
add_ds_unit_test(arm7_register_file_test)
add_ds_unit_test(arm7_barrel_shifter_test)
add_ds_unit_test(arm7_condition_test)
add_ds_unit_test(arm7_adc_sbc_test)
add_ds_unit_test(arm7_data_processing_test)
add_ds_unit_test(arm7_dp_spsr_restore_test)
add_ds_unit_test(arm7_flags_test)
add_ds_unit_test(arm7_run_sequence_test)
add_ds_unit_test(arm7_branch_test)
add_ds_unit_test(arm7_load_store_test)
add_ds_unit_test(arm7_branch_load_sequence_test)
add_ds_unit_test(arm7_reg_shift_dp_test)
add_ds_unit_test(arm7_multiply_test)
add_ds_unit_test(arm7_psr_transfer_test)
add_ds_unit_test(arm7_multiply_psr_sequence_test)
add_ds_unit_test(arm7_halfword_test)
add_ds_unit_test(arm7_halfword_sequence_test)
add_ds_unit_test(arm7_block_test)
add_ds_unit_test(arm7_swap_test)
add_ds_unit_test(arm7_block_swap_sequence_test)
add_ds_unit_test(arm7_thumb_dispatch_test)
add_ds_unit_test(arm7_thumb_dp_test)
add_ds_unit_test(arm7_thumb_ls_test)
add_ds_unit_test(arm7_thumb_block_branch_test)
add_ds_unit_test(arm7_thumb_sequence_test)
